--- a/css/1920.scss
+++ b/css/1920.scss
@@ -159,115 +159,15 @@ a {
     width: 100%;
     left: 0;
   }
-  .header {
-    position: relative;
-    z-index: 2;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    .header__logo {
-      width: 11.25vw;
-      height: auto;
-    }
-    .header__right-block {
-      display: flex;
-      align-items: center;
-      gap: 3.385vw;
-      .header__nav {
-        display: flex;
-        align-items: center;
-        gap: 2.604vw;
-        a {
-          text-decoration: none;
-          font-family: "Inter";
-          font-style: normal;
-          font-weight: 600;
-          font-size: 0.833vw;
-          line-height: 1.25vw;
-          letter-spacing: 0.15em;
-          text-transform: uppercase;
-          color: #ffffff;
-          transition: all 0.3s;
-          &:hover {
-            border-bottom: 0.052vw solid #ff66c4;
-            color: #ff66c4;
-          }
-        }
-      }
-      .header__button {
-        padding: 0;
-        position: relative;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        background: #ffffff;
-        border-radius: 0.417vw;
-        font-family: "Inter";
-        font-style: normal;
-        font-weight: 600;
-        font-size: 0.833vw;
-        line-height: 1.25vw;
-        text-align: center;
-        letter-spacing: 0.15em;
-        text-transform: uppercase;
-        color: #07031f;
-        border: none;
-        width: 8.177vw;
-        height: 2.292vw;
-        transition: all 0.3s;
-        letter-spacing: -0.02em;
-        .left-blok {
-          position: absolute;
-          left: 0;
-          top: 50%;
-          transform: translateY(-50%);
-          display: flex;
-          flex-direction: column;
-          justify-content: center;
-          gap: 0.26vw;
-          width: 0.677vw;
-          transition: all 0.3s;
-          span {
-            width: 100%;
-            background-color: #ff66c4;
-            height: 0.104vw;
-          }
-        }
-        .right-block {
-          position: absolute;
-          right: 0;
-          top: 50%;
-          transform: translateY(-50%);
-          display: flex;
-          flex-direction: column;
-          justify-content: center;
-          gap: 0.26vw;
-          width: 0.677vw;
-          transition: all 0.3s;
-          span {
-            width: 100%;
-            background-color: #ff66c4;
-            height: 0.104vw;
-          }
-        }
-        &:hover {
-          background: #ff66c4;
-          border-radius: 0.938vw;
-          color: #ffffff;
-          .left-blok,
-          .right-block {
-            opacity: 0;
-          }
-        }
-      }
-    }
-  }
   .main__container {
     position: relative;
+    height: 100%;
     .main-inbox {
       position: absolute;
       left: 0;
-      top: 13.021vw;
+      top: 29%;
+      // top: 27vh;
+      // top: 13.021vw;
       width: 26.719vw;
       height: auto;
       padding: 1.042vw 1.563vw 2.344vw 1.563vw;
@@ -290,7 +190,7 @@ a {
       }
     }
     .main-title {
-      top: 25vw;
+    top: 51.5%;
       left: 0;
       position: absolute;
       z-index: 3;
@@ -300,14 +200,15 @@ a {
       font-size: 3.021vw;
       line-height: 2.708vw;
       color: #ffffff;
-      width: 40.885vw;
+      width: max-content;
       span {
         color: #ff66c4;
       }
     }
     .main-subtitle {
       position: absolute;
-      top: 29.646vw;
+      top: 61%;
+      top: 57vh;
       width: 40.208vw;
       left: 0;
       font-family: "Inter";
@@ -322,7 +223,7 @@ a {
     .populacion-container {
       position: absolute;
       right: 2.083vw;
-      top: 6.25vw;
+      top: 16%;
       z-index: 3;
       .main-populacion {
         font-family: "Wild World";
@@ -1445,6 +1346,9 @@ a {
   line-height: calc(32 / 22);
   padding: 0.365vw 0 1.51vw 2.344vw;
   opacity: 0.6;
+  a{
+    color: #FF66C4;
+  }
 }
 
 footer {
