--- a/css/1920about.css
+++ b/css/1920about.css
@@ -356,6 +356,7 @@ a {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   background: #03010d;
 }
 .roadmap .roadmap__container {
