--- a/css/1920about.scss
+++ b/css/1920about.scss
@@ -326,6 +326,7 @@ a {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   background: #03010d;
   .roadmap__container {
     position: relative;
@@ -347,7 +348,6 @@ a {
         right: 175px;
         width: 87px;
         height: auto;
-        // background: #0D4B9E;
         mix-blend-mode:exclusion;
         border-radius: 10px;
         z-index: 25;
