--- a/css/1024.css
+++ b/css/1024.css
@@ -40,6 +40,12 @@
   .container {
     width: 92.188vw;
   }
+  .header {
+    padding: 3.906vw;
+  }
+  .header a .logo {
+    width: 18.457vw;
+  }
   .main {
     padding: 3.906vw;
     background-image: url(../img/main/main-background.png);
