--- a/css/1920about.scss
+++ b/css/1920about.scss
@@ -500,7 +500,7 @@ a {
           transform: scale(2);
         }
         .vr-buble {
-          transform: scale(3.59);
+          transform: translate(-50%, -50%) scale(3.59);
           opacity: 0.5;
         }
         .text1 {
@@ -573,7 +573,7 @@ a {
         }
         .vr-buble {
           transform: scale(24.7);
-          opacity: 0.5;
+          opacity: 0.1;
         }
         .text1 {
           top: 0;
