--- a/css/1920.css
+++ b/css/1920.css
@@ -155,6 +155,17 @@ a {
   margin: 0 auto;
 }
 
+.header {
+  position: absolute;
+  width: 100%;
+  padding: 1.823vw 2.604vw;
+  z-index: 10;
+}
+.header a .logo {
+  width: 204px;
+  height: auto;
+}
+
 .main {
   height: 100vh;
   padding: 1.823vw 2.604vw;
@@ -1382,7 +1393,7 @@ a {
   opacity: 0.6;
 }
 .accordion-content a {
-  color: #FF66C4;
+  color: #ff66c4;
 }
 
 footer {
@@ -1506,7 +1517,7 @@ footer .faq .main-title {
   letter-spacing: -0.02em;
   font-family: "Inter";
   text-transform: uppercase;
-  color: #FFFFFF;
+  color: #ffffff;
   text-decoration: none;
 }
 .footer .footer__block-wrapper .powered a img {
