--- a/css/1920.scss
+++ b/css/1920.scss
@@ -101,6 +101,19 @@ a {
   width: 72.917vw;
   margin: 0 auto;
 }
+.header {
+  position: absolute;
+  width: 100%;
+  padding: 1.823vw 2.604vw;
+  z-index: 10;
+  a {
+    .logo {
+      width: 204px;
+      height: auto;
+
+    }
+  }
+}
 .main {
   height: 100vh;
   padding: 1.823vw 2.604vw;
@@ -190,7 +203,7 @@ a {
       }
     }
     .main-title {
-    top: 51.5%;
+      top: 51.5%;
       left: 0;
       position: absolute;
       z-index: 3;
@@ -333,7 +346,7 @@ a {
     width: 100%;
     height: 100vh;
     z-index: 11;
-    .begining-blur{
+    .begining-blur {
       display: none;
     }
     .beginning-container {
@@ -1010,7 +1023,7 @@ a {
   height: 100%;
   margin-left: -0.052vw;
   transition: 1s background-size, 1s background-position;
-  .mintwaterway-blur{
+  .mintwaterway-blur {
     display: none;
   }
   #waterway-bg {
@@ -1172,7 +1185,7 @@ a {
       color: #fff;
       text-decoration: none;
       opacity: 0.3;
-      transition: .55s font-size, 0.3s opacity;
+      transition: 0.55s font-size, 0.3s opacity;
       outline: none;
       &:hover {
         opacity: 1;
@@ -1346,8 +1359,8 @@ a {
   line-height: calc(32 / 22);
   padding: 0.365vw 0 1.51vw 2.344vw;
   opacity: 0.6;
-  a{
-    color: #FF66C4;
+  a {
+    color: #ff66c4;
   }
 }
 
@@ -1475,7 +1488,7 @@ footer {
         letter-spacing: -0.02em;
         font-family: "Inter";
         text-transform: uppercase;
-        color: #FFFFFF;
+        color: #ffffff;
         text-decoration: none;
       }
     }
