--- a/css/375.scss
+++ b/css/375.scss
@@ -34,6 +34,14 @@
   .container {
     width: 89.333vw;
   }
+  .header {
+    padding: 8vw 5.333vw;
+    a {
+      .logo {
+        width: 50.4vw;  
+      }
+    }
+  }
   .main {
     height: auto;
     background-image: url(../img/main/main-background375.png);
